--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,11 @@
           <button class="button button-block button-positive">
             Login
           </button>
+          <div class="button-bar">
+          <button class="button icon ion-social-facebook button-positive"> Facebook</button>
+          <button class="button icon ion-social-twitter button-calm"> Twitter</button>
+          <button class="button icon ion-social-googleplus button-assertive"> Google</button>
+            </div>
         </div>
       </ion-content>
     </ion-pane>
